# ProjectHeartland

./: .directory  .gitignore  API.md  README.md  benchmark.sh  benchmark.txt
Client/: README  index.html  main.css  process.php
Client/scripts/: ajax.js  config.js  cookie.js  core.js  heartland.js  main.js  ui.js
HeartlandTester/: index.html  main.js  schedule-renderer.js
HeartlandTester/css/: font.css
Paper/: .gitignore  paper.tex  sigchi.cls  sp1-paper.tex  sp2-paper.bib  sp2-paper.tex
Server/: Cargo.toml
Server/lua/: admin_create.lua  admin_student_add.lua  admin_subject_add.lua  auth_login.lua  auth_logout.lua  auth_register.lua  student_profile.lua  student_schedule.lua  student_schedule_cancel.lua  student_schedule_enlist.lua  student_waitlist_cancel.lua  student_waitlist_enlist.lua  student_waitlist_position.lua  subject_slots.lua  subject_waitlist_count.lua
Server/src/: database.rs  handler.rs  main.rs  scripts.rs
TestPrototype/: config.js  index.html  main.js  parser.pl  subjects.json
TestPrototype/css/: style.css
